# stock-logistics-reservation

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  test-requirements.txt  test-requrements.txt
product_expiry_assign/: README.rst
product_expiry_assign/i18n/: it.po
sale_stock_available_to_promise_release/: README.rst  __manifest__.py
sale_stock_available_to_promise_release/i18n/: de.po  es_AR.po  fr.po  fr_CH.po  it.po  (+1 more)
sale_stock_available_to_promise_release_dropshipping/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml
stock_available_to_promise_release/: README.rst  __manifest__.py
stock_available_to_promise_release_carrier_alternative/: README.rst  __manifest__.py
stock_available_to_promise_release_delivery/: README.rst  __manifest__.py
stock_available_to_promise_release_dynamic_routing/: README.rst  __manifest__.py
stock_available_to_promise_release_exclude_location/: README.rst  __manifest__.py
stock_available_to_promise_release_weight_volume/: README.rst  __manifest__.py
stock_move_auto_assign/: README.rst  __manifest__.py
stock_picking_unreserve_button/: README.rst  __manifest__.py
stock_putaway_child_location_apply/: README.rst  __manifest__.py
stock_quant_manual_assign/: README.rst  __manifest__.py
stock_reserve/: README.rst  __manifest__.py
stock_reserve/data/: cron.xml
stock_reserve_rule/: README.rst  __manifest__.py
stock_reserve_rule_full_demand/: README.rst  __manifest__.py
stock_reserve_sale/: README.rst  __manifest__.py
stock_rule_reserve_max_quantity/: README.rst  __manifest__.py
(+110 files in other folders)
